# conversation-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-deploy.md  env.example  main.py  pyproject.toml  secr.json
.codellm/rules/: rules.mdc
.github/workflows/: conversation-agent-AutoDeployTrigger-7318439d-4325-4ef7-8db3-363bdbbfcb2d.yml  deploy.yml
app/: __init__.py
app/application/: __init__.py
app/application/agent/: __init__.py
app/application/agent/conversation_agent/: __init__.py
app/application/agent/conversation_agent/agent_builder/: __init__.py  conversation_agent_builder.py  decision_router.py
app/application/agent/conversation_agent/node_functions/: __init__.py
app/application/agent/conversation_agent/node_functions/gateway_node/: decide_next_node_prompt.py  gateway_node.py  mr_couch_service_prompt.py  services_2.md
app/application/agent/conversation_agent/node_functions/how_it_works_node/: how_it_works_node.py  how_the_clean_works.md  how_the_clean_works_prompt.py
app/application/agent/conversation_agent/node_functions/services_node/: services_1.md  services_node.py
app/application/interfaces/: __init__.py  illm_service.py
app/application/services/: __init__.py  conversation_agent_service.py
app/domain/: __init__.py
app/domain/entities/: conversation_agent.py
app/domain/input/: input_message.py
app/domain/state/: conversation_agent_state.py
app/infrastructure/: __init__.py
app/infrastructure/config/: config.py
app/infrastructure/llm/: llm_factory.py  openai_service.py
app/presentation/: __init__.py  conversation_agent_router.py
